# PreSalesAIAgent

./: .gitignore  City_Canvas_POC.docx  KNOWLEDGE_BASE.md  PROGRESS.md  README.md  routes.md  usermanual.md
backend/: =3.1.18  dataCreate.py  employees.csv  main.py  patch.py  pyproject.toml  requirements.txt  test_model.py  test_proposal.py  update.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  ai_conversation.py  client_employee_chat.py  email_otp.py  employee.py  enums.py  final_proposal.py  poc_document.py  proposal.py  proposal_request.py  resource_allocation.py  user.py
backend/app/schemas/: __init__.py  admin_request_schema.py  ai_agent_schema.py  ai_conversation_schema.py  auth_schema.py  email_otp_schema.py  employee_schema.py  final_proposal_schema.py  poc_document_schema.py  proposal_request_schema.py  proposal_schema.py  resource_allocation_schema.py  user_schema.py
backend/app/services/: ai_agent_service.py
backend/app/services/admin/: admin_service.py
backend/app/services/ai/: ai_agent_service.py  deterministic_services.py
backend/app/services/auth/: admin_request_services.py  auth_service.py  auth_services.py  email_service.py  router.py  service.py
backend/app/services/employees/: __init__.py  employee_service.py
backend/app/services/proposal/: __init__.py  document_builder.py  docx_generator.py  engine.py  example_usage.py  generate_poc.py  generators.py  llm_client.py  prompt.py  renderer.py  (+3 more)
backend/app/utils/: email_services.py  otp_store.py
(+126 files in other folders)
