[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.4",
    "bcrypt==4.3.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "jose>=1.0.0",
    "loguru==0.7.3",
    "openai==1.97.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.35.0",
    "weasyprint==65.1",
]
